# ratatui-which-key

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile
examples/: demo.rs  extension_trait.rs
src/: category_builder.rs  group_builder.rs  key.rs  keymap.rs  lib.rs  node.rs  render.rs  result.rs  scope_and_category_builder.rs  scope_builder.rs  state.rs  test_utils.rs  types.rs  widget.rs
src/crossterm/: event_result.rs  handlers.rs  key.rs  keymap_ext.rs  mod.rs  state_ext.rs
