[package]
name = "ratatui-which-key"
edition = "2024"
version = "0.1.0"
description = "A which-key popup widget for ratatui applications"
license = "AGPLv3"

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
collapsible_if = "allow"
default_constructed_unit_structs = "allow"
doc_markdown = "allow"
enum_glob_use = "allow"
match_wildcard_for_single_variants = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
single_match = "allow"
single_match_else = "allow"
wildcard_imports = "allow"

[dependencies]
derive_more = { version = "2", features = ["debug", "display"] }
ratatui = "0.30.0"
tracing = "0.1"
crossterm = { version = "0.29", optional = true }
