[package]
name = "ratatui-which-key"
edition = "2024"
version = "0.8.0"
description = "A which-key popup widget for ratatui applications"
license = "LGPL-3.0-or-later"
repository = "https://github.com/jayson-lennon/ratatui-which-key"
keywords = ["ratatui", "input", "tui", "terminal"]
categories = ["command-line-interface"]
exclude = ["/media", "AGENTS.md", "justfile", "release.toml"]
readme = "README.md"

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
collapsible_if = "allow"
default_constructed_unit_structs = "allow"
doc_markdown = "allow"
enum_glob_use = "allow"
match_wildcard_for_single_variants = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
single_match = "allow"
single_match_else = "allow"
wildcard_imports = "allow"

[dependencies]
ratatui = "0.30.0"
tracing = "0.1"
crossterm = { version = "0.29", optional = true }

[dev-dependencies]
derive_more = { version = "2", features = ["debug", "display"] }
